tests/rosetta/transpiler/Clojure/function-frequency.error
run error: exit status 1
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/rosetta/transpiler/Clojure/function-frequency.clj:27:2062).
Can only recur from tail position

Full report at:
/tmp/clojure-1449431615515496489.edn
